fix: it was reported that Firefox might display an horizontal scrollbar

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
 section.header {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   background: linear-gradient(0deg, var(--color-primary), var(--color-secondary));
